--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "bhupendra-mp/garmin-wellness",
+  "description" : "Oauth 1.0 adapter for garmin-wellness",
   "license": "MIT",
   "require": {
     "php": ">=5.4.0",
